--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <script src="script.js" defer></script>
+        <p>Name: <span class="name"></span></p>
+    <script src="main.js" defer></script>
     </body>
 </html>
