basic website layout in index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <script src="script.js" defer></script>
+        <title>Home</title>
+        <link rel="stylesheet" href="./main.css" />
     </head>
     <body>
-        <p>Name: <span class="name"></span></p>
-    <script src="main.js" defer></script>
+        <section> 
+            <!--TODO homepage-->
+        </section>
+
+        <section>
+            <!--TODO about us-->
+        </section>
+
+        <section>
+            <!--TODO members-->
+        </section>
+
+        <section>
+            <!--TODO interactive terminal-->
+        </section>
+
+        <section>
+            <!--TODO contact-->
+        </section>
+        
+        <footer>
+
+        </footer>
     </body>
 </html>
