--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+    Edit made by Claire Cho & Alex Khazzam on 5/2/21
+    -----------------------------------------------------
+    Creating HTML <section> tags to outline components of the website. Added a Bootstrap navbar as well, and a bunch of style, script, and layout imports as well. 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,11 +11,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home</title>
 
-        <!--Deferring script imports so that they load after HTML rendering-->
-
         <!--Layout script imports-->
 
-        <script src="script.js" defer></script>
         <script src="./layouts/bootstrap.js" defer></script>
         <script src="./layouts/navbar.js" defer></script>
 
@@ -18,14 +21,40 @@
         <script src="./js/about-us.js" defer></script>
         <script src="./js/members.js" defer></script>
         <script src="./js/contact.js" defer></script>
+        <script src="./js//navbar.js" defer></script>
 
         <!--Style imports-->
 
-        <link rel="stylesheet" href="./main.css" />
+        <link rel="stylesheet" href="./css/navbar.css" />
+        <link rel="stylesheet" href="./css/index.css" />
+
+        <!--Bootstrap imports-->
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous"
+        />
+        <script
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous" defer
+        ></script>
+        <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"
+        defer ></script>
+        <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"
+        defer ></script>
     </head>
     
     <body>
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark"></nav>
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" id="navbar">
+
+        </nav>
 
         <section id="home" class="section"> 
             <!--TODO homepage-->
