Adding about-us css import

--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./css/navbar.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/about-us.css" />
 
     <!--Bootstrap imports-->
 
@@ -74,7 +75,7 @@
     </section>
 
     <section id="about-us" class="section">
-      <!--TODO about us-->
+
     </section>
 
     <section id="members" class="section">
