--- a/index.htm
+++ b/index.htm
@@ -17,18 +17,12 @@
 
     <!--Content script imports-->
 
-    <script src="./js/about-us.js" defer></script>
-    <script src="./js/members.js" defer></script>
-    <script src="./js/contact.js" defer></script>
     <script src="./js/navbar.js" defer></script>
-    <script src="./js/home.js" defer></script>
+    <script src="./js/index.js" defer></script>
 
     <!--Style imports-->
 
-    <link rel="stylesheet" href="./css/navbar.css" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/home.css" />
-    <link rel="stylesheet" href="./css/about-us.css" />
 
     <!--Bootstrap imports-->
 
@@ -62,7 +56,6 @@
       class="navbar navbar-expand-lg navbar navbar-dark bg-dark"
       id="navbar"
     ></nav>
-
     <section id="home" class="section">
       <div id="home__club-name-wrapper">
         <h1 id="club-name"></h1>
@@ -73,23 +66,5 @@
       </div>
       <div class="loader">Loading...</div>
     </section>
-
-    <section id="about-us" class="section">
-
-    </section>
-
-    <section id="members" class="section">
-      <!--TODO members-->
-    </section>
-
-    <section id="terminal" class="section">
-      <!--TODO interactive terminal-->
-    </section>
-
-    <section id="contact" class="section">
-      <!--TODO contact-->
-    </section>
-
-    <footer id="footer" class="section"></footer>
   </body>
 </html>
