--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,7 @@
     <!--Style imports-->
 
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/navbar.css" />
 
     <!--Bootstrap imports-->
 
