--- a/index.htm
+++ b/index.htm
@@ -13,10 +13,11 @@
 
     <!--Layout script imports-->
 
-    <script src="./js/search.js" defer></script>
-
+    <script src="./includes/modal.js" defer></script>
+    
     <!--Content script imports-->
-
+    
+    <script src="./js/search.js" defer></script>
     <script src="./js/navbar.js" defer></script>
     <script src="./js/index.js" defer></script>
 
@@ -24,6 +25,7 @@
 
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/navbar.css" />
+    <link rel="stylesheet" href="./css/modal.css" />
 
     <!--Bootstrap imports-->
 
@@ -75,6 +77,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#" id="website"></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="chat-live"></a>
+        </li>
       </ul>
       <div id="search-wrapper">
         <input class="form-control mr-sm-2" id="search" placeholder="Search" aria-label="Search">
@@ -95,24 +100,6 @@
       <div class="loader">Loading...</div>
     </section>
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title"></h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <ul id="helpful-links">
-
-              </ul>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
     </div>
   </body>
 </html>
