--- a/pages/about.htm
+++ b/pages/about.htm
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About</title>
 
+    <script src="../includes/modal.js" defer></script>
+
     <!--Content script imports-->
 
+    <script src="../js/search.js" defer></script>
     <script src="../js/navbar.js" defer></script>
 
     <!--Style imports-->
@@ -73,25 +76,7 @@
     </form>
   </div>
   </nav>
-    <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
   </div>
   </body>
 </html>
