--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="entertainment-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="entertainment-dropdown-links">
-            <a class="dropdown-item" href="./pages/api/covid">COVID-19 Tracker</a>
+            <a class="dropdown-item" href="./pages/api/covid.htm">COVID-19 Tracker</a>
             <a class="dropdown-item" href="./pages/api/movie">Movie Searcher</a>
             <a class="dropdown-item" href="https://{chat-live-server-link}">Chat Live</a>
             <div class="dropdown-divider"></div>
