--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="entertainment-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="entertainment-dropdown-links">
-            <a class="dropdown-item" href="./pages/api/covid.htm">COVID-19 Tracker</a>
+            <a class="dropdown-item" href="./pages/covid.htm">COVID-19 Tracker</a>
             <a class="dropdown-item" href="./pages/api/movie">Movie Searcher</a>
             <a class="dropdown-item" href="https://{chat-live-server-link}">Chat Live</a>
             <div class="dropdown-divider"></div>
@@ -98,7 +98,7 @@
       </ul>
       <div id="search-wrapper">
         <input class="form-control mr-sm-2" id="search" placeholder="Search" aria-label="Search">
-        <button type="button" class="btn btn-outline-success" id="search-btn" data-toggle="modal" data-target="#exampleModal" onclick="filterResults()">
+        <button type="button" class="btn btn-outline-success" id="search-btn" data-toggle="modal" data-target="#exampleModal" onclick="filterResults('index')">
           Search
         </button>
       </div>
