made header on about page

--- a/pages/about.htm
+++ b/pages/about.htm
@@ -76,6 +76,9 @@
     </form>
   </div>
   </nav>
+    <div id="about-content-wrapper">
+      <h2 id="about-header">We are Great Neck North High's Computer Science Club</h2>
+    </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   </div>
   </body>
